--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/toniorh/externo-api.git"
+    "url": "https://github.com/toniorh/api-externo-sw.git"
   },
   "keywords": [
     "api",
